src/test/deca/context/invalid/unknown_type.deca
{
INTEGER x;
}
// @expected_output deca:2:0: Type INTEGER is not defined
